--- a/public/styles.css
+++ b/public/styles.css
@@ -1,22 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+* {
+    font-family: "Play", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
 body {
-    background-color: rgb(33, 33, 33);
-    color: white;
+    background-color: #F2F8FF;
+    color: #207FE6;
+    padding: 0;
+    margin: 0;
 }
 
 .header-text>h1 {
-    font-size: 2.25rem;
+    font-size: 40px;
+    font-weight: 900;
     text-align: center;
 }
 
 .header-text>h2 {
-    font-size: 1.25rem;
+    font-size: 24px;
     text-align: center;
 }
 
-.schedule {
-    display: none;
+.main-line{
+    background-color: #060606;
+    color: #060606;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 5px;
+}
+.class-button,
+.group-button,
+.letter-button{
+    margin-top: 10px;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    background-color: #1D1D1D;
+    opacity: 0.65;
+    margin-left: 5px;
+    margin-right: 5px;
+    transition: 0.3s;
+}
+.class-button:hover,
+.group-button:hover,
+.letter-button:hover{
+    background-color: #207FE6;
+    color: #1D1D1D;
+    opacity: 1;
+}
+.class-button.active,
+.group-button.active,
+.letter-button.active {
+    background-color: #207FE6;
+    color: #1D1D1D;
+    opacity: 1;
+}
+.main-table {
+    margin: 0 auto;
+    border-collapse: collapse;
+    width: 95%;
+    color: #3a3a3a;
+    font-size: 18px;
+}
+.main-table thead {
+    background-color: #5fadffe8;
+    color: #3a3a3a;
+}
+.main-table th, .main-table td {
+    padding: 18px;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.active {
-    display: block;
+.main-table tr:not(:last-child) {
+    border-bottom: 1px solid #1D1D1D;
+}
+.class-buttons,
+.letter-buttons,
+.group-buttons {
+    padding: 0;
+    max-width: max-content;
+    margin: 15px auto;
+}
+.result-schedule {
+    font-size: 30px;
+    background-color: #207FE6;
+    color: #F2F8FF;
+    height: 55px;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    padding-top: 15px;
+    margin-bottom: 15px;
+}
+.table-num{
+    font-size: 23px;
+    font-weight: bold;
+    color: #060606;
 }
