--- a/public/clubs.css
+++ b/public/clubs.css
@@ -1,8 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+
+* {
+    font-family: "Play", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
 body {
-    background-color: rgb(33, 33, 33);
+    background-color: #fff;
+    color: #207FE6;
 }
 .club-card {
-    background-color: white;
+    background-color: #207FE6;
+    color: #fff;
     margin: 0;
     padding: 0;
     width: 300px;
@@ -19,19 +28,230 @@ body {
     border-top-right-radius: 25px;
 }
 .text {
+    font-size: 23px;
     margin: 0 auto;
     padding: 0;
     max-width: max-content;
-    color: black;
 }
 .about-club {
+    font-size: 18px;
     text-align: center;
-}
-h1, h3 {
-    text-align: center;
-    color: white;
 }
 .club-cards {
     display: flex;
+    margin-top: 75px;
     flex-wrap: wrap;
+}
+.links {
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+}
+.header-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.header-text>h1 {
+    font-size: 45px;
+    font-weight: 900;
+    text-align: center;
+    flex: 1;
+    margin: 0;
+    padding: 0;
+    margin-top: 25px;
+}
+.subtext {
+    text-align: center;
+}
+
+.subtext h2 {
+    font-size: 30px;
+    margin: 50px 0;
+}
+
+.hamburger {
+    position: absolute;
+    right: 25px;
+    top: 15px;
+    cursor: pointer;
+}
+
+.menu {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #000000;
+    width: fit-content;
+    display: flex;
+    list-style: none;
+}
+  
+.menu a {
+    text-decoration: none;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+  
+.menu .link {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 12px 36px;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+  
+.menu .link::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0a3cff;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+  
+.menu .link svg {
+    width: 14px;
+    height: 14px;
+    fill: #000000;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+  
+.menu .item {
+    position: relative;
+}
+  
+.menu .item .submenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 100%;
+    border-radius: 0 0 16px 16px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    border: 1px solid #cccccc;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-12px);
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+    z-index: 1;
+    pointer-events: none;
+    list-style: none;
+}
+  
+.menu .item:hover .submenu {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    pointer-events: auto;
+    border-top: transparent;
+    border-color: #0a3cff;
+}
+  
+.menu .item:hover .link {
+    color: #ffffff;
+    border-radius: 16px 16px 0 0;
+}
+  
+.menu .item:hover .link::after {
+    transform: scaleX(1);
+    transform-origin: right;
+}
+  
+.menu .item:hover .link svg {
+    fill: #ffffff;
+    transform: rotate(-180deg);
+}
+  
+.submenu .submenu-item {
+    width: 100%;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+  
+.submenu .submenu-link {
+    display: block;
+    padding: 12px 0;
+    width: 100%;
+    position: relative;
+    text-align: center;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+  
+.submenu .submenu-item:last-child .submenu-link {
+    border-bottom: none;
+}
+  
+.submenu .submenu-link::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scaleX(0);
+    width: 100%;
+    height: 100%;
+    background-color: #0a3cff;
+    z-index: -1;
+    transform-origin: left;
+    transition: transform 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+  
+.submenu .submenu-link:hover:before {
+    transform: scaleX(1);
+    transform-origin: right;
+}
+  
+.submenu .submenu-link:hover {
+    color: #ffffff;
+}
+
+.submenu-button {
+    border: 0;
+    background-color: transparent;
+    padding: 12px 0;
+}
+
+body.dark-theme {
+    background-color: #1D1D1D;
+    color: #207FE6;
+    padding: 0;
+    margin: 0;
+}
+
+body.dark-theme .menu .link svg {
+    width: 14px;
+    height: 14px;
+    fill: #fff;
+    transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
+}
+body.dark-theme .menu .link{
+    color: #fff;
+}
+
+body.dark-theme .menu .item:hover .link svg {
+    fill: #060606;
+    transform: rotate(-180deg);
+}
+
+body.dark-theme .menu .item:hover .link {
+    color: #060606;
+}
+
+body.dark-theme .submenu .submenu-link {
+    color: #fff;
+}
+body.dark-theme .submenu .submenu-link:hover {
+    color: #060606;
 }
